--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ branches:
 install:
 - git remote -v
 script:
-- "bash  ./sync.sh 10"
+- bash  ./sync.sh 10
 before_install:
 - export start_time=$(date +%s)
 - mkdir -p ~/.docker
-- mkdir -p ~/.ssh 
-- openssl aes-256-cbc -K $encrypted_79f048dff636_key -iv $encrypted_79f048dff636_iv
-  -in .travis/conf.tar.gz.enc -out ~/conf.tar.gz -d
+- mkdir -p ~/.ssh
+- openssl aes-256-cbc -K $encrypted_369cb29bbb5f_key -iv $encrypted_369cb29bbb5f_iv
+  -in conf.tar.gz.enc -out ~/conf.tar.gz -d
 - tar zxf ~/conf.tar.gz -C ~
 - chmod 600 ~/.ssh/id_rsa
 - chmod 600 ~/.docker/config.json
