--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_79f048dff636_key -iv $encrypted_79f048dff636_iv
   -in .travis/conf.tar.gz.enc -out ~/conf.tar.gz -d
 - tar zxf ~/conf.tar.gz -C ~
-- chmod 600 ~/.ssh/id_rsa
+- chmod 600 ~/.ssh/github_id_rsa
 - chmod 600 ~/.docker/config.json
 - eval $(ssh-agent)
-- ssh-add ~/.ssh/id_rsa
+- ssh-add ~/.ssh/github_id_rsa
 - df -h
